# file_sync

./: .gitignore  README.md
file_sync/: Cargo.toml  Config.toml  ConfigBak.toml
file_sync/file_test/: master.txt  slave.txt  stopwords.txt  synonyms.txt  test.txt
file_sync/file_test/hash_storage/: hash_value.json
file_sync/file_test/monitoring/: master.txt  slave.txt
file_sync/file_test/monitoring2/: master.txt
file_sync/hash_storage/: hash_value.json
file_sync/hash_storage/hash_storage/: hash_value.json
file_sync/src/: common.rs  main.rs
file_sync/src/configs/: Configs.rs  ServerConfig.rs  mod.rs  server_config.rs
file_sync/src/controller/: main_controller.rs
file_sync/src/env_config/: env_config.rs
file_sync/src/external_clients/: file_transfer_client.rs  mod.rs  secure_file_transfer_client.rs
file_sync/src/handler/: main_handler.rs  master_handler.rs  mod.rs  slave_handler.rs
file_sync/src/middleware/: middle_ware.rs  mod.rs
file_sync/src/model/: Configs.rs  ElasticMsg.rs  HashStorage.rs  ServerConfig.rs  file_info.rs  mod.rs  monitoring_path_info.rs
file_sync/src/repository/: elastic_repository.rs  hash_repository.rs  mod.rs  request_repository.rs
file_sync/src/router/: app_router.rs  mod.rs
file_sync/src/service/: api_service.rs  config_request_service.rs  config_service.rs  file_service.rs  file_service_impl.rs  mod.rs  request_service.rs  request_service_impl.rs  watch_service.rs
file_sync/src/traits/service/: file_service.rs  mod.rs  (+1 more)
file_sync/src/utils_modules/: hash_utils.rs  io_utils.rs  mod.rs  request_utils.rs  time_utils.rs  tls_utils.rs
file_sync/static/css/: main_style.css
file_sync/static/js/: main_script.js
file_sync/template/: main.html
