[package]
name = "file_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
getset = "0.1.2"
derive-new = "0.6.0"
glob = "0.3.1"
toml = "0.8.19"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] } 
async-trait = "0.1.83"
sha2 = "0.10.8"
hotwatch = "0.5.0"
futures = "0.3.31"
once_cell = "1.20.2"
chrono = "0.4.31"
rustls = "0.23"
rustls-pemfile = "2.2"
hyper = { version = "1.5", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"